# DownloadVideoBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
alembic/: env.py
alembic/versions/: 23b2ef53d378_initial_migration.py  f2ea99ea49a5_.py  remove_unused_user_fields.py
src/bot/: factory.py  keyboards.py  main.py
src/bot/handlers/: __init__.py  commands.py  messages.py  video.py
src/config/: settings.py
src/database/: __init__.py  database.py  models.py
src/services/: user_service.py  video_downloader.py
