[project]
name = "download-video"
version = "0.1.0"
description = "Telegram бот для скачивания коротких видео из Instagram, TikTok и YouTube Shorts"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "yt-dlp>=2024.1.7",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

